--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "nhsuk-frontend": "^10.3.1",
     "nhsuk-prototype-kit": "^8.0.1",
-    "luxon": "^3.7.2"
+    "luxon": "^3.7.2",
+     "@dr.pogodin/csurf": "^1.16.8"
   },
   "devDependencies": {
   },
